src/scss/recit/_navbar.scss
#mainTopNav{
    max-width: $page-max-width;
    min-height:  $top-navbar-height;
    margin: auto;

    @media screen and (max-width: 992px){
        &.fixed-top{
            .dropdown{
                .dropdown-menu{
                    max-height: calc(40vh);
                }
            } 
        } 
        .nav-item-divider{    transform: rotate(90deg);                align-self: flex-start!important;}
    }

    .navbar-nav{ 
        align-items: baseline;    

        .nav-item{
            .nav-link{
                i.fa { font-size: 1.1rem;}
                min-width: 50px;
                span[data-title]{display: none; margin-left: .5rem;}
            }
        }
        .nav-item.popover-region{float:none; margin-right: 0;}
        
        .nav-item-divider{width: 2px; height: 25px; border-right: 1px solid #666; margin-bottom: 0rem; margin-right: 1rem; display: flex; align-self: center;}      
    }

    .dropdown-menu{ right: 0; left: auto; }
}

nav.navbar {
    max-height: inherit; // min-content does not work with firefox;
}

nav.navbar .logo img {
    max-width: 60px;
}

.userloggedinas {
    nav.navbar ul.navbar-nav .usermenu {
        line-height: 35px;

        .usertext .meta.viewingas {
            line-height: initial;
        }

        .userbutton .avatars .realuser {
            padding-top: 10px;
        }
    }
}

.breadcrumb {
    margin-top: .5rem;
    margin-bottom: .5rem;
    padding: .5rem;
}

/* Patch m2 overlapping page content */

#page-content {
    margin-top: 10px;
}

